ishneet/list123
imp@ubuntu:~$ python
Python 2.7.6 (default, Mar 22 2014, 22:59:56) 
[GCC 4.8.2] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> list=["a","b","c",1,1,2,3,6]
>>> print list
['a', 'b', 'c', 1, 1, 2, 3, 6]
>>> list.index('c')
2
>>> list.appent("l")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'appent'
>>> list.append("l")
>>> print list
['a', 'b', 'c', 1, 1, 2, 3, 6, 'l']
>>> list2=["d","e"]
>>> print list2
['d', 'e']
>>> list.extend(list2)
>>> print list
['a', 'b', 'c', 1, 1, 2, 3, 6, 'l', 'd', 'e']
>>> list.insert(3,"h")
>>> print list
['a', 'b', 'c', 'h', 1, 1, 2, 3, 6, 'l', 'd', 'e']
>>> list.remove("l")
>>> print list
['a', 'b', 'c', 'h', 1, 1, 2, 3, 6, 'd', 'e']
>>> list.count(1)
2
>>> list.pop(3)
'h'
>>> print list
['a', 'b', 'c', 1, 1, 2, 3, 6, 'd', 'e']
>>> list.reverse()
>>> print list
['e', 'd', 6, 3, 2, 1, 1, 'c', 'b', 'a']
>>> list.sort()
>>> print list
[1, 1, 2, 3, 6, 'a', 'b', 'c', 'd', 'e']
>>> print(list[1])
1
>>> print list
[1, 1, 2, 3, 6, 'a', 'b', 'c', 'd', 'e']
>>> list[4]='u'
>>> print list
[1, 1, 2, 3, 'u', 'a', 'b', 'c', 'd', 'e']
>>> print list
[1, 1, 2, 3, 'u', 'a', 'b', 'c', 'd', 'e']
>>> if "u" in list:
...     print("yes,' 'u' is in the list ")
... 
yes,' 'u' is in the list 
>>> print (len(list))
10
 list=("a","b","c")
>>> print list
('a', 'b', 'c')
>>> print (list[1])
b
>>> list[1]="d"
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object does not support item assignment
>>> print list
('a', 'b', 'c')
>>> for x in list:
...     print(x)
... 
a
b
c
>>> if "a" in list
  File "<stdin>", line 1
    if "a" in list
                 ^
SyntaxError: invalid syntax
>>> if "a" in list:
...     print("yes,'a' in the list")
... 
yes,'a' in the list
>>> print(len(list))
3
>>> del list
>>> print list
<type 'list'>
>>> print (list)
<type 'list'>
>>> list1=tuple(("a","b","c"))
>>> print (list1)
('a', 'b', 'c')
>>> if "a" in list
>>> list={"key":"value","key":"value"}
>>> print list
{'key': 'value'}
>>> list2={"fruit":"kiwi","season":"winter"}
>>> print (list2) 
{'season': 'winter', 'fruit': 'kiwi'}
>>> x=list2["fruit"]
>>> print(list2)
{'season': 'winter', 'fruit': 'kiwi'}
>>> print(x)
kiwi
>>> x=list2.get("fruit")
>>> print(x)
kiwi
>>> list2["season"]="summer"
>>> print list2
{'season': 'summer', 'fruit': 'kiwi'}
>>> for x in list2
  File "<stdin>", line 1
    for x in list2
                 ^
SyntaxError: invalid syntax
>>> for x in list2:
...     print x
... 
season
fruit
>>> for x in list2.values():
...     print(x)
... 
summer
kiwi
>>> for x,y in list2.items():
...     print(x,y)
... 
('season', 'summer')
('fruit', 'kiwi')
>>> print(len(list2))
2

